removed py37 env

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
 isolated_build = True
-envlist = py37,py38
+envlist = py38
 
 [testenv]
 deps =
-    py37,py38: -r requirements.txt
+    py38: -r requirements.txt
     black
     coverage
     flake8
@@ -13,8 +13,8 @@ deps =
     pylint
     pytest
 commands =
-    black optimal_pytorch/
-    flake8 optimal_pytorch/ --max-line-length 88
+    black optimal_pytorch/ examples/
+    flake8 optimal_pytorch/ examples/MNIST examples/separable_data.py --max-line-length 88
     pylint optimal_pytorch/coin_betting/
     mypy optimal_pytorch/
     coverage erase
