--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,8 @@ examples/MNIST/runs
 examples/grid_search/tune_results
 .DS_Store
 .vscode
+.tox
+.coverage
 .pytest_cache/
 tests/.coverage
+.mypy_cache/
