--- a/tox.ini
+++ b/tox.ini
@@ -18,5 +18,5 @@ commands =
     pylint optimal_pytorch/coin_betting/
     mypy optimal_pytorch/
     coverage erase
-    coverage run --include=optimal_pytorch/* -m pytest tests/cb_torch_test.py tests/loss_test.py
+    coverage run --include=optimal_pytorch/* -m pytest tests/
     coverage report -m
