--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         python-version: [3.7, 3.8]
 
     env:
-      USING_COVERAGE: "3.9"
+      USING_COVERAGE: "3.8"
 
     steps:
       - name: Check-out the repo under $GITHUB_WORKSPACE
@@ -38,11 +38,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          python -m pip install black coverage flake8 flit mccabe mypy pylint pytest tox tox-gh-actions
+          make deps
 
       - name: Run tox
         run: |
-          python -m tox
+          make tox
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
