--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7, 3.8, 3.9]
 
     env:
-      USING_COVERAGE: "3.8"
+      USING_COVERAGE: "3.9"
 
     steps:
       - name: Check-out the repo under $GITHUB_WORKSPACE
