added coverage xml

--- a/tox.ini
+++ b/tox.ini
@@ -20,3 +20,4 @@ commands =
     coverage erase
     coverage run --include=optimal_pytorch/* -m pytest tests/cb_torch_test.py tests/loss_test.py
     coverage report -m
+    coverage xml
