--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,10 @@ jobs:
         run: |
           python -m tox
 
+      - name: List files
+        run: |
+          ls -la
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         if: contains(env.USING_COVERAGE, matrix.python-version)
