adding linter on examples

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ deps =
 commands =
     black optimal_pytorch/ examples/
     flake8 optimal_pytorch/ examples/MNIST examples/separable_data.py --max-line-length 88
-    pylint optimal_pytorch/coin_betting/
+    pylint optimal_pytorch/coin_betting/ examples/
     mypy optimal_pytorch/
     coverage erase
     coverage run --include=optimal_pytorch/* -m pytest tests/
