--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+plotly==4.14.3
 numpy==1.19.4
+streamlit==0.77.0
 ray==1.2.0
+torchvision==0.8.2
 pytest==6.2.3
 matplotlib==3.3.3
-torchvision==0.8.2
 PyYAML==5.4.1
-scikit_learn==0.24.1
+scikit_learn==0.24.2
